modified: code splitter for chunking

--- a/upsert_codes_test.ipynb
+++ b/upsert_codes_test.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "fe6fde41",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
+    "import utils\n",
     "import shutil\n",
     "import requests\n",
     "import tempfile\n",
@@ -23,15 +24,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "02d4cb8d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exception occurred with language perl: Language Language.PERL is not implemented yet!\n"
+     ]
+    }
+   ],
    "source": [
     "language_map = {\n",
     "    \".py\": \"python\",\n",
-    "    \".js\": \"javascript\",\n",
-    "    \".ts\": \"typescript\",\n",
+    "    \".js\": \"js\",\n",
+    "    \".ts\": \"ts\",\n",
     "    \".java\": \"java\",\n",
     "    \".cpp\": \"cpp\",\n",
     "    \".c\": \"c\",\n",
@@ -44,12 +53,19 @@
     "    \".yml\": \"yaml\",\n",
     "    \".md\": \"markdown\",\n",
     "    \".txt\": \"text\",\n",
-    "}"
+    "}\n",
+    "\n",
+    "language_splitters = {}\n",
+    "for ln in Language:\n",
+    "    try:\n",
+    "        language_splitters[ln.value] = RecursiveCharacterTextSplitter.from_language(ln)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Exception occurred with language {ln.value}: {str(e)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "e698f66f",
    "metadata": {},
    "outputs": [
@@ -66,92 +82,30 @@
    "source": [
     "client = weaviate.connect_to_local()\n",
     "db_index = \"codes\"\n",
+    "reset_db = False\n",
     "\n",
-    "client.collections.delete(db_index)\n",
-    "collection = client.collections.create(db_index, description=\"Code snippets with NL descriptions\")"
+    "if reset_db:\n",
+    "    client.collections.delete(db_index)\n",
+    "    collection = client.collections.create(db_index, description=\"Code snippets with NL descriptions\")\n",
+    "else:\n",
+    "    collection = client.collections.get(db_index)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "6e88c0fd",
+   "cell_type": "markdown",
+   "id": "f725d06a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def detect_encoding(file_path: str) -> str:\n",
-    "    encodings = [\"utf-8\", \"utf-16\", \"utf-32\", \"ascii\", \"latin-1\"]\n",
-    "    for encoding in encodings:\n",
-    "        try:\n",
-    "            with open(file_path, \"r\", encoding=encoding) as f:\n",
-    "                f.read()\n",
-    "            return encoding\n",
-    "        except UnicodeDecodeError:\n",
-    "            continue\n",
-    "    return \"utf-8\"  # 기본값"
+    "### 먼저 zip파일 내 모든 파일을 읽어 langchain Document 객체화"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "47c44485",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_file(path):\n",
-    "    encoding = detect_encoding(path)\n",
-    "    filetype = Path(path).suffix.lower()\n",
-    "    with open(path, \"r\", encoding=encoding) as f:\n",
-    "        document = f.read()\n",
-    "\n",
-    "    return [\n",
-    "        Document(\n",
-    "            page_content=document,\n",
-    "            metadata={\n",
-    "                \"source\": path,\n",
-    "                \"language\": language_map.get(filetype, \"unknown\"),\n",
-    "                \"filetype\": filetype\n",
-    "            }\n",
-    "        )\n",
-    "    ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "id": "f4912f99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def vectorize(input_str: str) -> list[float]:\n",
-    "    \"\"\"\n",
-    "    Genos에 올라간 embedding 호출하여 vectorize\n",
-    "    \"\"\"\n",
-    "\n",
-    "    emb_url = \"https://genos.mnc.ai:3443/api/gateway/rep/serving/10/v1/embeddings\"\n",
-    "    emb_key = \"d2278640406c48b1b626ae5963fa25a1\"\n",
-    "    emb_headers = {\n",
-    "        \"Content-Type\": \"application/json\", \"Authorization\": f\"Bearer {emb_key}\"\n",
-    "    }\n",
-    "    input_data = {\n",
-    "        \"input\": [input_str]\n",
-    "    }\n",
-    "    try:\n",
-    "        response = requests.post(url=emb_url, headers=emb_headers, json=input_data)\n",
-    "        return response.json()[\"data\"][0][\"embedding\"]\n",
-    "    \n",
-    "    except Exception as e:\n",
-    "        print(f\"Error in vectorize: {str(e)}\")\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "4c5c70f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 먼저 zip파일 내 모든 파일을 읽어 langchain Document 객체화\n",
     "temp_dir = tempfile.mkdtemp()\n",
     "try: \n",
     "    subprocess.run([\"unzip\", \"-q\", \"code_snippets/Flowise-main.zip\", \"-d\", temp_dir])\n",
@@ -171,7 +125,7 @@
     "    # 파일 읽기 병렬 처리\n",
     "    with ThreadPoolExecutor(max_workers=os.cpu_count()) as executor:\n",
     "        futures = {\n",
-    "            executor.submit(load_file, file_path): file_path for file_path in file_paths\n",
+    "            executor.submit(utils.load_file, file_path): file_path for file_path in file_paths\n",
     "        }\n",
     "\n",
     "        for fut in as_completed(futures):\n",
@@ -229,7 +183,7 @@
     "                \"language\": chunk.metadata.get(\"language\", \"unknown\"),\n",
     "                \"file_type\": chunk.metadata.get(\"filetype\", \"unknown\")\n",
     "            },\n",
-    "            vector=vectorize(chunk.page_content)\n",
+    "            vector=utils.vectorize(chunk.page_content)\n",
     "        ))\n",
     "\n",
     "    if len(chunks_for_weaviate) % 1000 == 0:\n",
@@ -241,40 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "e382ee43",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name: Test Docker Build\n",
-      "\n",
-      "on:\n",
-      "    push:\n",
-      "        branches:\n",
-      "            - main\n",
-      "\n",
-      "    pull_request:\n",
-      "        branches:\n",
-      "            - '*'\n",
-      "\n",
-      "jobs:\n",
-      "    build:\n",
-      "        runs-on: ubuntu-latest\n",
-      "        env:\n",
-      "            PUPPETEER_SKIP_DOWNLOAD: true\n",
-      "        steps:\n",
-      "            - uses: actions/checkout@v3\n",
-      "\n",
-      "            - run: docker build --no-cache -t flowise .\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = \"docker build\"\n",
-    "query_vector = vectorize(query)\n",
+    "query_vector = utils.vectorize(query)\n",
     "search_out = collection.query.hybrid(query=query, vector=query_vector)\n",
     "print(search_out.objects[0].properties[\"text\"])"
    ]
@@ -309,25 +236,101 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "61adc2fa",
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "20fea81f",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "codesplit_db_index = \"codesplit\"\n",
+    "collection = client.collections.create(codesplit_db_index, description=\"Code snippets splitted by language\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "aa4536e3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.close()"
+    "chunks_for_weaviate = []\n",
+    "not_supported = 0\n",
+    "text_splitter = RecursiveCharacterTextSplitter()\n",
+    "\n",
+    "for doc in all_docs:\n",
+    "    # print(doc)\n",
+    "    doc_language = doc.metadata[\"language\"]\n",
+    "\n",
+    "    if doc_language == \"javascript\": doc_language = \"js\"\n",
+    "    if doc_language == \"typescript\": doc_language = \"ts\"\n",
+    "\n",
+    "    if doc_language in [\"json\", \"text\", \"unknown\", \"yaml\", \"css\"]: # json 등 일반 텍스트에 해당하면 -> 일단은 단순 길이 기반 청킹 수행\n",
+    "        chunks = text_splitter.create_documents([doc.page_content])\n",
+    "\n",
+    "    elif doc_language in [\"python\", \"js\", \"ts\", \"html\", \"c\", \"cpp\", \"csharp\", \"markdown\"]: # 코드에 해당하는 경우 -> 코드 기반 청킹 수행\n",
+    "        sp_splitter = language_splitters[doc_language] # 해당하는 코드의 splitter를 가져옴\n",
+    "        chunks = sp_splitter.create_documents([doc.page_content])\n",
+    "\n",
+    "    else:\n",
+    "        print(doc_language)\n",
+    "        chunks = []\n",
+    "\n",
+    "    for chunk in chunks:\n",
+    "        chunks_for_weaviate.append(\n",
+    "        weaviate.classes.data.DataObject(\n",
+    "            properties={\n",
+    "                \"text\": chunk.page_content,\n",
+    "                \"source\": chunk.metadata.get(\"source\", \"unknown\"),\n",
+    "                \"language\": chunk.metadata.get(\"language\", \"unknown\"),\n",
+    "                \"file_type\": chunk.metadata.get(\"filetype\", \"unknown\")\n",
+    "            },\n",
+    "            vector=utils.vectorize(chunk.page_content)\n",
+    "        ))\n",
+    "\n",
+    "    if len(chunks_for_weaviate) and len(chunks_for_weaviate) % 1000 == 0:\n",
+    "        collection.data.insert_many(chunks_for_weaviate)\n",
+    "        chunks_for_weaviate = []\n",
+    "\n",
+    "collection.data.insert_many(chunks_for_weaviate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf3da15b",
+   "metadata": {},
+   "source": [
+    "### 모델 호출: code chunk에 대한 description을 생성"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "34472516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_splitter = RecursiveCharacterTextSplitter()\n",
+    "\n",
+    "# Document 객체를 chunk화\n",
+    "# print(all_docs[0])\n",
+    "chunks = text_splitter.split_documents(all_docs)\n",
+    "chunks = [chunk for chunk in chunks if chunk.page_content]\n",
+    "\n",
+    "desc_aug_chunks = []\n",
+    "system_prompt = \"You are a code analyzer. Read the given code and write a description of it.\"\n",
+    "for chunk in chunks[:10]:\n",
+    "    model_out = utils.call_llm(system_prompt, chunk.page_content)\n",
+    "    description = model_out[\"content\"]\n",
+    "\n",
+    "    desc_aug_chunks.append(f\"\"\"### {description}\\n{chunk.page_content}\"\"\")\n",
+    "\n",
+    "print(desc_aug_chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90c88503",
    "metadata": {},
    "outputs": [],
    "source": []
