added: non-vector based methods, agent based methods

--- a/upsert_codes_test.ipynb
+++ b/upsert_codes_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fe6fde41",
    "metadata": {},
    "outputs": [],
@@ -24,18 +24,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "02d4cb8d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exception occurred with language perl: Language Language.PERL is not implemented yet!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "language_map = {\n",
     "    \".py\": \"python\",\n",
@@ -55,17 +47,17 @@
     "    \".txt\": \"text\",\n",
     "}\n",
     "\n",
-    "language_splitters = {}\n",
-    "for ln in Language:\n",
-    "    try:\n",
-    "        language_splitters[ln.value] = RecursiveCharacterTextSplitter.from_language(ln)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Exception occurred with language {ln.value}: {str(e)}\")"
+    "# language_splitters = {}\n",
+    "# for ln in Language:\n",
+    "#     try:\n",
+    "#         language_splitters[ln.value] = RecursiveCharacterTextSplitter.from_language(ln, chunk_size=5000, chunk_overlap=500)\n",
+    "#     except Exception as e:\n",
+    "#         print(f\"Exception occurred with language {ln.value}: {str(e)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e698f66f",
    "metadata": {},
    "outputs": [
@@ -73,7 +65,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/seonghwan/miniconda3/envs/langchain/lib/python3.12/site-packages/weaviate/warnings.py:133: DeprecationWarning: Dep005: You are using weaviate-client version 4.10.4. The latest version is 4.14.1.\n",
+      "/Users/seonghwan/miniconda3/envs/langchain/lib/python3.12/site-packages/weaviate/warnings.py:133: DeprecationWarning: Dep005: You are using weaviate-client version 4.10.4. The latest version is 4.14.3.\n",
       "            Consider upgrading to the latest version. See https://weaviate.io/developers/weaviate/client-libraries/python for details.\n",
       "  warnings.warn(\n"
      ]
@@ -101,14 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4c5c70f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "temp_dir = tempfile.mkdtemp()\n",
     "try: \n",
-    "    subprocess.run([\"unzip\", \"-q\", \"code_snippets/Flowise-main.zip\", \"-d\", temp_dir])\n",
+    "    subprocess.run([\"unzip\", \"-q\", \"code_snippets/task_vectors-main.zip\", \"-d\", temp_dir])\n",
     "except Exception as e:\n",
     "    shutil.rmtree(temp_dir)\n",
     "    raise ValueError(f\"Cannot unzip file: {e}\")\n",
@@ -237,29 +229,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "20fea81f",
    "metadata": {},
    "outputs": [],
    "source": [
     "codesplit_db_index = \"codesplit\"\n",
+    "client.collections.delete(codesplit_db_index)\n",
     "collection = client.collections.create(codesplit_db_index, description=\"Code snippets splitted by language\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "aa4536e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BatchObjectReturn(_all_responses=[UUID('917b7705-10ee-4a47-939d-f6c204a0ec32'), UUID('20d4f4c8-55f2-422f-b027-d4e33c64997d'), UUID('421c9804-c6d0-49dc-a222-c33c6ad846d0'), UUID('5c453f72-ff7b-4332-9236-891c0c699612'), UUID('ecc8d414-9dc3-4337-950d-580291f3bff1'), UUID('e531c335-08e3-4629-b7e8-a2634cbb0c17'), UUID('7def03d5-84ff-4614-b840-09e6349b1ecc'), UUID('edd42a10-c9b9-49c5-98ad-0dc3bf947490'), UUID('782845e9-2a16-412e-855b-e6fe4df06012'), UUID('ef5fa8a8-457f-4202-adb2-780789842c39'), UUID('7d77e8f2-9564-4ed8-a145-24b828b2af7b'), UUID('07b7e11a-00e9-4381-a8e4-29fcac542316'), UUID('83f8e975-a1e5-4373-beeb-ea6f63a3963c'), UUID('5b1a9936-462c-40d5-86a3-3367d5ec9438'), UUID('1fe6610a-c2c0-4d3a-86e9-81425fc5c255'), UUID('88501970-cb93-4708-9daa-7ef3479b29f5'), UUID('1b66c05e-811d-4291-b025-cea5fb6cde7a'), UUID('20da645d-c528-4ff7-8ae6-498450426163'), UUID('5f235a63-1944-4fde-bfeb-1ada1ed7c966'), UUID('89e13a89-2aaa-411b-9468-0c358b22a646'), UUID('8bc26028-87f0-4c6f-bf44-763a6ac629f5'), UUID('62ea5c6d-aea6-420e-93f8-d998d89f8bdb'), UUID('93dff50e-fcb3-4ea5-a4e8-4e625af8e9a8'), UUID('e58795b5-ab8a-4920-9597-2f0a1efbdc03'), UUID('f426eb66-4022-4bda-ac58-72bd6e724325'), UUID('090ffc58-c84a-40c9-8695-4bddbe941096'), UUID('4254d38b-b7d6-41c9-bc3e-2a74b7e79ac0'), UUID('e5393304-86b8-43b2-988c-57c6c6203b80'), UUID('7a3a3de0-3bca-450b-85a9-5748cd42ba65')], elapsed_seconds=0.05639028549194336, errors={}, uuids={0: UUID('917b7705-10ee-4a47-939d-f6c204a0ec32'), 1: UUID('20d4f4c8-55f2-422f-b027-d4e33c64997d'), 2: UUID('421c9804-c6d0-49dc-a222-c33c6ad846d0'), 3: UUID('5c453f72-ff7b-4332-9236-891c0c699612'), 4: UUID('ecc8d414-9dc3-4337-950d-580291f3bff1'), 5: UUID('e531c335-08e3-4629-b7e8-a2634cbb0c17'), 6: UUID('7def03d5-84ff-4614-b840-09e6349b1ecc'), 7: UUID('edd42a10-c9b9-49c5-98ad-0dc3bf947490'), 8: UUID('782845e9-2a16-412e-855b-e6fe4df06012'), 9: UUID('ef5fa8a8-457f-4202-adb2-780789842c39'), 10: UUID('7d77e8f2-9564-4ed8-a145-24b828b2af7b'), 11: UUID('07b7e11a-00e9-4381-a8e4-29fcac542316'), 12: UUID('83f8e975-a1e5-4373-beeb-ea6f63a3963c'), 13: UUID('5b1a9936-462c-40d5-86a3-3367d5ec9438'), 14: UUID('1fe6610a-c2c0-4d3a-86e9-81425fc5c255'), 15: UUID('88501970-cb93-4708-9daa-7ef3479b29f5'), 16: UUID('1b66c05e-811d-4291-b025-cea5fb6cde7a'), 17: UUID('20da645d-c528-4ff7-8ae6-498450426163'), 18: UUID('5f235a63-1944-4fde-bfeb-1ada1ed7c966'), 19: UUID('89e13a89-2aaa-411b-9468-0c358b22a646'), 20: UUID('8bc26028-87f0-4c6f-bf44-763a6ac629f5'), 21: UUID('62ea5c6d-aea6-420e-93f8-d998d89f8bdb'), 22: UUID('93dff50e-fcb3-4ea5-a4e8-4e625af8e9a8'), 23: UUID('e58795b5-ab8a-4920-9597-2f0a1efbdc03'), 24: UUID('f426eb66-4022-4bda-ac58-72bd6e724325'), 25: UUID('090ffc58-c84a-40c9-8695-4bddbe941096'), 26: UUID('4254d38b-b7d6-41c9-bc3e-2a74b7e79ac0'), 27: UUID('e5393304-86b8-43b2-988c-57c6c6203b80'), 28: UUID('7a3a3de0-3bca-450b-85a9-5748cd42ba65')}, has_errors=False)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chunks_for_weaviate = []\n",
     "not_supported = 0\n",
     "text_splitter = RecursiveCharacterTextSplitter()\n",
     "\n",
     "for doc in all_docs:\n",
-    "    # print(doc)\n",
+    "    doc_source = doc.metadata[\"source\"]\n",
     "    doc_language = doc.metadata[\"language\"]\n",
+    "    doc_filetype = doc.metadata[\"filetype\"]\n",
     "\n",
     "    if doc_language == \"javascript\": doc_language = \"js\"\n",
     "    if doc_language == \"typescript\": doc_language = \"ts\"\n",
@@ -280,18 +285,272 @@
     "        weaviate.classes.data.DataObject(\n",
     "            properties={\n",
     "                \"text\": chunk.page_content,\n",
-    "                \"source\": chunk.metadata.get(\"source\", \"unknown\"),\n",
-    "                \"language\": chunk.metadata.get(\"language\", \"unknown\"),\n",
-    "                \"file_type\": chunk.metadata.get(\"filetype\", \"unknown\")\n",
+    "                \"source\": doc_source,\n",
+    "                \"language\": doc_language,\n",
+    "                \"file_type\": doc_filetype\n",
     "            },\n",
     "            vector=utils.vectorize(chunk.page_content)\n",
     "        ))\n",
     "\n",
-    "    if len(chunks_for_weaviate) and len(chunks_for_weaviate) % 1000 == 0:\n",
+    "    if len(chunks_for_weaviate) > 30:\n",
     "        collection.data.insert_many(chunks_for_weaviate)\n",
     "        chunks_for_weaviate = []\n",
     "\n",
     "collection.data.insert_many(chunks_for_weaviate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf5a74e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"주어진 query 대로 기능할 수 있는 python 코드를 작성한다. 개략적으로만 구현하며, 오직 코드만 출력 내용에 포함한다.\"\n",
+    "\n",
+    "query_0 = \"task 벡터가 정의된 코드 찾아서 설명해줘\"\n",
+    "query_0_code = utils.call_llm(prompt, query_0)[\"content\"]\n",
+    "query_0_vector = utils.vectorize(query_0_code)\n",
+    "\n",
+    "query_1 = \"task 벡터를 학습하는 코드 찾아서 설명해줘\"\n",
+    "query_1_code = utils.call_llm(prompt, query_1)[\"content\"]\n",
+    "query_1_vector = utils.vectorize(query_1_code)\n",
+    "\n",
+    "output_0 = collection.query.near_vector(near_vector=query_0_vector)\n",
+    "output_1 = collection.query.near_vector(near_vector=query_1_vector)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "23038dc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```python\n",
+      "import numpy as np\n",
+      "\n",
+      "class TaskVector:\n",
+      "    def __init__(self, pretrained_model, finetuned_model):\n",
+      "        self.pretrained_model = pretrained_model\n",
+      "        self.finetuned_model = finetuned_model\n",
+      "\n",
+      "    def get_task_vector(self):\n",
+      "        task_vector = []\n",
+      "        for pretrained_param, finetuned_param in zip(self.pretrained_model.parameters(), self.finetuned_model.parameters()):\n",
+      "            task_vector.append(finetuned_param - pretrained_param)\n",
+      "        return task_vector\n",
+      "\n",
+      "# Example usage:\n",
+      "pretrained_model = np.random.rand(10)\n",
+      "finetuned_model = np.random.rand(10)\n",
+      "\n",
+      "task_vector = TaskVector(pretrained_model, finetuned_model)\n",
+      "print(task_vector.get_task_vector())\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(query_0_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cf4a0785",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "```python\n",
+      "import numpy as np\n",
+      "import torch\n",
+      "import torch.nn as nn\n",
+      "import torch.optim as optim\n",
+      "\n",
+      "class TaskVector(nn.Module):\n",
+      "    def __init__(self, input_dim, output_dim):\n",
+      "        super(TaskVector, self).__init__()\n",
+      "        self.fc1 = nn.Linear(input_dim, 128)\n",
+      "        self.fc2 = nn.Linear(128, output_dim)\n",
+      "\n",
+      "    def forward(self, x):\n",
+      "        x = torch.relu(self.fc1(x))\n",
+      "        x = self.fc2(x)\n",
+      "        return x\n",
+      "\n",
+      "def train_task_vector(task_vector, device, loader, optimizer, criterion):\n",
+      "    task_vector.train()\n",
+      "    total_loss = 0\n",
+      "    for batch_idx, (data, target) in enumerate(loader):\n",
+      "        data, target = data.to(device), target.to(device)\n",
+      "        optimizer.zero_grad()\n",
+      "        output = task_vector(data)\n",
+      "        loss = criterion(output, target)\n",
+      "        loss.backward()\n",
+      "        optimizer.step()\n",
+      "        total_loss += loss.item()\n",
+      "    return total_loss / len(loader)\n",
+      "\n",
+      "def main():\n",
+      "    input_dim = 784\n",
+      "    output_dim = 10\n",
+      "    batch_size = 32\n",
+      "    epochs = 10\n",
+      "\n",
+      "    device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+      "\n",
+      "    task_vector = TaskVector(input_dim, output_dim).to(device)\n",
+      "\n",
+      "    # dummy data loader\n",
+      "    class DummyLoader:\n",
+      "        def __init__(self, batch_size, input_dim, output_dim):\n",
+      "            self.batch_size = batch_size\n",
+      "            self.input_dim = input_dim\n",
+      "            self.output_dim = output_dim\n",
+      "\n",
+      "        def __len__(self):\n",
+      "            return 100\n",
+      "\n",
+      "        def __iter__(self):\n",
+      "            for _ in range(len(self)):\n",
+      "                data = torch.randn(self.batch_size, self.input_dim).to(device)\n",
+      "                target = torch.randint(0, self.output_dim, (self.batch_size,)).to(device)\n",
+      "                yield data, target\n",
+      "\n",
+      "    loader = DummyLoader(batch_size, input_dim, output_dim)\n",
+      "\n",
+      "    optimizer = optim.Adam(task_vector.parameters(), lr=0.001)\n",
+      "    criterion = nn.CrossEntropyLoss()\n",
+      "\n",
+      "    for epoch in range(epochs):\n",
+      "        loss = train_task_vector(task_vector, device, loader, optimizer, criterion)\n",
+      "        print(f'Epoch {epoch+1}, Loss: {loss:.4f}')\n",
+      "\n",
+      "if __name__ == '__main__':\n",
+      "    main()\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(query_1_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f6ae4a47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Create the task vector\n",
+      "task_vector = TaskVector(pretrained_checkpoint, finetuned_checkpoint)\n",
+      "# Negate the task vector\n",
+      "neg_task_vector = -task_vector\n",
+      "# Apply the task vector\n",
+      "image_encoder = neg_task_vector.apply_to(pretrained_checkpoint, scaling_coef=0.5)\n",
+      "# Evaluate\n",
+      "eval_single_dataset(image_encoder, dataset, args)\n",
+      "eval_single_dataset(image_encoder, 'ImageNet', args)\n",
+      "```\n",
+      "\n",
+      "You can also find an example of adding task vectors together below, using the MNIST and RESISC45 datasets:\n",
+      "\n",
+      "\n",
+      "```python\n",
+      "import torch\n",
+      "from task_vectors import TaskVector\n",
+      "from eval import eval_single_dataset\n",
+      "from args import parse_arguments\n",
+      "\n",
+      "# Config\n",
+      "datasets = ['MNIST', 'RESISC45']\n",
+      "model = 'ViT-L-14'\n",
+      "args = parse_arguments()\n",
+      "args.data_location = '/path/to/data'\n",
+      "args.model = model\n",
+      "args.save = f'checkpoints/{model}'\n",
+      "pretrained_checkpoint = f'checkpoints/{model}/zeroshot.pt'\n",
+      "\n",
+      "# Create the task vectors\n",
+      "task_vectors = [\n",
+      "    TaskVector(pretrained_checkpoint, f'checkpoints/{model}/{dataset}/finetuned.pt')\n",
+      "    for dataset in datasets\n",
+      "]\n",
+      "# Sum the task vectors\n",
+      "task_vector_sum = sum(task_vectors)\n",
+      "# Apply the resulting task vector\n",
+      "image_encoder = task_vector_sum.apply_to(pretrained_checkpoint, scaling_coef=0.8)\n",
+      "# Evaluate\n",
+      "for dataset in datasets:\n",
+      "    eval_single_dataset(image_encoder, dataset, args)\n",
+      "```\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output_0.objects[0].properties[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7d91d2d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "import os\n",
+      "import torch\n",
+      "import torchvision.datasets as datasets\n",
+      "\n",
+      "\n",
+      "class DTD:\n",
+      "    def __init__(self,\n",
+      "                 preprocess,\n",
+      "                 location=os.path.expanduser('~/data'),\n",
+      "                 batch_size=32,\n",
+      "                 num_workers=16):\n",
+      "        # Data loading code\n",
+      "        traindir = os.path.join(location, 'dtd', 'train')\n",
+      "        valdir = os.path.join(location, 'dtd', 'val')\n",
+      "\n",
+      "        self.train_dataset = datasets.ImageFolder(\n",
+      "            traindir, transform=preprocess)\n",
+      "        self.train_loader = torch.utils.data.DataLoader(\n",
+      "            self.train_dataset,\n",
+      "            shuffle=True,\n",
+      "            batch_size=batch_size,\n",
+      "            num_workers=num_workers,\n",
+      "        )\n",
+      "\n",
+      "        self.test_dataset = datasets.ImageFolder(valdir, transform=preprocess)\n",
+      "        self.test_loader = torch.utils.data.DataLoader(\n",
+      "            self.test_dataset,\n",
+      "            batch_size=batch_size,\n",
+      "            num_workers=num_workers\n",
+      "        )\n",
+      "        idx_to_class = dict((v, k)\n",
+      "                            for k, v in self.train_dataset.class_to_idx.items())\n",
+      "        self.classnames = [idx_to_class[i].replace(\n",
+      "            '_', ' ') for i in range(len(idx_to_class))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output_1.objects[0].properties[\"text\"])"
    ]
   },
   {
@@ -329,8 +588,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "90c88503",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.collections.delete(\"codebase_flowise\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "dfeac816",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<weaviate.collections.collection.sync.Collection at 0x10fcaba10>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3d753d3",
    "metadata": {},
    "outputs": [],
    "source": []
